--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -221,6 +221,7 @@
   z-index: 1; }
 
 [id*="skill1"], [id*="skill4"], [id*="skill7"] {
+  position: relative;
   background-color: rgba(255, 0, 255, 0.7); }
 
 [id*="skill2"], [id*="skill5"] {
