Specify base font 1em

--- a/theme-testing/style.scss
+++ b/theme-testing/style.scss
@@ -10,6 +10,7 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: "Raleway", sans-serif;
+	font-size: 1em;
 	line-height: 1.5; // if 16px, = 24px line height
 }
 
