--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -471,6 +471,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Raleway", sans-serif;
+  font-size: 1em;
   line-height: 1.5; }
 
 .home-landing-grid {
