Add footer HTML created/tested on KBD's 'patterns' repo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,62 @@
-<footer>
+<footer class="footer-wrapper">
+  <div class="footer-main-grid">
+
+    <div class="footer__to-top">
+        <a href="#main" aria-label="Back to top">
+          <img src="{{ '/assets/img/thin-up-arrow-white.svg' | relative_url }}" alt="Up arrow">
+          <span>Back<br/>to top</span>
+        </a>
+    </div>
+
+    <div class="footer__sitemap">
+      <div class="footer-map__title">Explore</div>
+      <div class="footer-map__links">
+        <a href="#">Home</a>
+        <a href="#">FAQ</a>
+        <a href="#">Hours & Spaces</a>
+        <a href="#">Events</a>
+      </div>
+    </div>
+
+    <div class="footer__connect">
+      <div class="footer-connect__title">Connect</div>
+      <div class="footer-connect__social">
+        <a href="https://www.facebook.com/scholarslab/">
+          <img src="{{ '/assets/img/facebook-white.svg' | relative_url }}" alt="Facebook icon">
+          <span>Facebook</span>
+        </a>
+        <a href="https://twitter.com/scholarslab">
+          <img src="{{ '/assets/img/twitter-white.svg' | relative_url }}" alt="Twitter icon">
+          <span>Twitter</span>
+        </a>
+        <a href="https://github.com/scholarslab">
+          <img src="{{ '/assets/img/github-white.svg' | relative_url }}" alt="Github icon">
+          <span>Github</span>
+        </a>
+        <a href="mailto:scholarslab@virginia.edu">
+          <img src="{{ '/assets/img/envelope-outline-white.svg' | relative_url }}" alt="Email icon">
+          <span>Email us</span>
+        </a>
+      </div>
+      <!--div class="footer-connect__news">
+        <div class="footer-news__title">Newsletter</div>
+        <div class="footer-news__modal"><!-- icon wrapped in JS trigger for newsletter modal to come up -></div>
+      </div-->
+    </div>
+
+    <div class="footer__contact">
+      <div class="footer-contact__title">Contact</div>
+      <div class="footer-contact__email"><span>Email:</span><a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a></div>
+      <div class="footer-contact__address"><span>Address:</span>P.O. Box 400129<br/>Charlottesville, VA<br/>22904-4129</div>
+      <div class="footer-contact__phone"><span>Phone:</span>434-243-8800</div>
+      <div class="footer-contact__fax"><span>Fax:</span>434-924-1431</div>
+    </div>
+
+    <div class="footer__logos">
+      <a href="#" class="footer-logo__slab" aria-label="Scholars' Lab home"><img src="{{ '/assets/img/slab-logo-color-white.svg' | relative_url }}" alt="SLab logo"></a>
+      <span>proudly part of</span>
+      <a href="#" class="footer-logo__uva" aria-label="UVA Library home"><img src="{{ '/assets/img/uva-library-text-block-white.svg' | relative_url }}" alt="UVA Library logo"></a>
+    </div>
+
+  </div>
 </footer>
