--- a/theme-testing/style.scss
+++ b/theme-testing/style.scss
@@ -1,6 +1,7 @@
 @import "_sass/nav";
 @import "_sass/makerspace";
 // @import "_sass/amanda";
+@import "_sass/research";
 
 * {
 	box-sizing: border-box;
