Prepend 'big-' to gallery titles so not caught by attr select

--- a/theme-testing/_sass/_research.scss
+++ b/theme-testing/_sass/_research.scss
@@ -1,4 +1,4 @@
-/* Research Project Page */
+/* Research Project Page: */
 
 /* Landing: */
 
@@ -105,7 +105,7 @@
 
 }
 
-.research-internal__title {
+.research-internal__big-title {
 
 }
 
@@ -119,7 +119,7 @@
 
 }
 
-.research-collab__title {
+.research-collab__big-title {
 
 }
 
