--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -464,7 +464,7 @@
 }
 
 */
-/* Research Project Page */
+/* Research Project Page: */
 /* Landing: */
 .research-landing-wrapper {
   position: relative;
@@ -581,6 +581,206 @@
   font-size: 1.25rem;
   text-align: center;
   color: black; }
+
+/* Universal footer styles: */
+[class*="footer"] {
+  color: white; }
+  [class*="footer"] a {
+    text-decoration: none;
+    color: white; }
+
+[class*="__title"][class*="footer"] {
+  line-height: 1;
+  margin-bottom: 1em;
+  margin-top: .5em;
+  font-weight: 700;
+  text-transform: uppercase; }
+
+/* Main styles: */
+.footer-wrapper {
+  margin-top: 2rem;
+  padding: 1rem 4.167%;
+  background-color: black; }
+  @media screen and (min-width: 900px) {
+    .footer-wrapper {
+      padding: 1rem 8.33%; } }
+
+.footer-main-grid {
+  position: relative;
+  display: grid;
+  grid-template-areas: "top" "site" "connect" "contact" "logos";
+  grid-template-columns: 1fr;
+  justify-content: center;
+  align-items: start;
+  max-width: 1000px;
+  margin: 0 auto; }
+  @media screen and (min-width: 768px) {
+    .footer-main-grid {
+      grid-template-areas: "site contact connect top" ".. logos logos ..";
+      grid-template-columns: 1fr 1fr 1fr 1fr; } }
+
+.footer__sitemap, .footer__contact, .footer__connect {
+  position: relative; }
+  @media screen and (max-width: 767px) {
+    .footer__sitemap, .footer__contact, .footer__connect {
+      justify-self: center;
+      width: 250px;
+      margin-bottom: 1em; } }
+  @media screen and (min-width: 768px) {
+    .footer__sitemap::before, .footer__contact::before, .footer__connect::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: -1rem;
+      display: block;
+      width: 2px;
+      height: 100%;
+      background-color: white; } }
+
+/* Back To Top: */
+.footer__to-top {
+  grid-area: top;
+  justify-self: center; }
+  .footer__to-top a {
+    position: relative;
+    display: flex;
+    flex-flow: column nowrap; }
+    .footer__to-top a img {
+      height: 2em;
+      margin-bottom: .5em; }
+    .footer__to-top a span {
+      position: relative;
+      width: 4em;
+      padding-bottom: .5em;
+      font-weight: 700;
+      text-transform: uppercase;
+      text-align: center;
+      line-height: 1;
+      color: magenta !important;
+      border-bottom: 1px solid white; }
+  @media screen and (min-width: 768px) {
+    .footer__to-top {
+      justify-self: end; }
+      .footer__to-top a {
+        flex-flow: row nowrap;
+        align-items: flex-end; }
+        .footer__to-top a img {
+          height: 4em;
+          margin-bottom: 0;
+          margin-top: .5em;
+          transform: translate(0.5rem, 0); }
+        .footer__to-top a span {
+          padding-bottom: 0;
+          text-align: left;
+          border-bottom: none; } }
+
+/* Explore: */
+.footer__sitemap {
+  grid-area: site;
+  width: 100%; }
+  @media screen and (min-width: 600px) {
+    .footer__sitemap {
+      max-width: 75%; } }
+  @media screen and (max-width: 767px) {
+    .footer__sitemap {
+      justify-self: center;
+      margin: 1em 0; } }
+
+@media screen and (max-width: 767px) {
+  .footer-map__title {
+    display: none; } }
+
+.footer-map__links a {
+  display: inline-block;
+  padding-right: 1em; }
+  .footer-map__links a:first-of-type {
+    color: magenta; }
+@media screen and (max-width: 767px) {
+  .footer-map__links {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around; } }
+@media screen and (min-width: 768px) {
+  .footer-map__links a {
+    display: block; } }
+
+/* Contact: */
+.footer__contact {
+  grid-area: contact;
+  max-width: 250px;
+  text-align: right; }
+  .footer__contact div:first-of-type {
+    text-align: left; }
+  .footer__contact span {
+    float: left;
+    font-family: "Raleway", sans-serif;
+    font-weight: normal; }
+
+[class*="footer-contact"] {
+  margin-top: .5rem;
+  line-height: 1; }
+
+.footer-contact__email {
+  display: none; }
+
+.footer-contact__address {
+  line-height: 1.25; }
+
+/* Connect: */
+.footer__connect {
+  grid-area: connect;
+  max-width: 250px; }
+  @media screen and (min-width: 768px) {
+    .footer__connect {
+      justify-self: end; } }
+
+.footer-connect__social {
+  position: relative;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between; }
+  .footer-connect__social a {
+    display: flex;
+    height: 2rem;
+    line-height: 2rem;
+    margin-bottom: .5rem; }
+    .footer-connect__social a img {
+      display: inline-block;
+      width: 2rem; }
+    .footer-connect__social a span {
+      padding-left: 2em;
+      display: none; }
+  @media screen and (min-width: 768px) {
+    .footer-connect__social {
+      flex-flow: column nowrap; }
+      .footer-connect__social a span {
+        display: initial; } }
+
+/* Logos: */
+.footer__logos {
+  grid-area: logos;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 2em; }
+  .footer__logos a {
+    display: inline-block; }
+    .footer__logos a:first-of-type {
+      margin-right: 2em; }
+  .footer__logos span {
+    margin-top: 1rem;
+    font-size: .5rem;
+    font-style: italic;
+    display: none; }
+
+.footer-logo__slab img {
+  height: 3rem; }
+
+.footer-logo__uva {
+  margin-top: 1em; }
+  .footer-logo__uva img {
+    height: 2rem; }
 
 * {
   box-sizing: border-box; }
