--- a/theme-testing/style.scss
+++ b/theme-testing/style.scss
@@ -2,6 +2,7 @@
 @import "_sass/makerspace";
 // @import "_sass/amanda";
 @import "_sass/research";
+@import "_sass/footer";
 
 * {
 	box-sizing: border-box;
