--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -468,8 +468,7 @@
 /* Landing: */
 .research-landing-wrapper {
   position: relative;
-  display: grid;
-  grid-auto-rows: minmax(100vh, auto); }
+  display: grid; }
 
 .research-landing-grid {
   position: relative;
@@ -539,13 +538,18 @@
 /* Main Content: */
 .research-main-content {
   position: relative;
-  padding: 1em 4.167%;
-  /* ADD TO ALL MAIN CONTENT DEFS: */ }
+  padding: 1em 4.167%; }
   @media screen and (min-width: 600px) {
     .research-main-content {
       padding: 1em 8.33%; } }
 
 /* Galleries: */
+[class*="big-title"] {
+  position: relative;
+  font-size: 2rem;
+  font-weight: 900;
+  line-height: 1; }
+
 /* 1. Internal: */
 /* 2. Collaborative: */
 /* Grid for items: */
@@ -559,16 +563,17 @@
   position: relative;
   display: flex;
   flex-flow: column nowrap;
+  padding: 1em;
   margin-bottom: 1em;
   margin-right: 1em;
-  border: 1px solid black; }
+  margin-left: 1em;
+  border: 1px solid rgba(0, 0, 0, 0.15); }
   .research__item a {
     text-decoration: none; }
 
 .research-item__img {
   position: relative;
   margin: 0 auto;
-  background-color: rgba(0, 0, 0, 0.05);
   border: 1px solid rgba(0, 0, 0, 0.15); }
   .research-item__img img {
     position: relative;
@@ -576,10 +581,12 @@
 
 .research-item__title {
   margin-top: 1em;
-  font-family: "Oswald", sans-serif;
-  font-weight: 600;
+  font-family: "base-mono-narrow", monospace;
+  font-weight: 200;
   font-size: 1.25rem;
   text-align: center;
+  text-transform: uppercase;
+  line-height: 1.15;
   color: black; }
 
 /* Universal footer styles: */
