--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -556,38 +556,42 @@
 .research-items-wrapper {
   position: relative;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); }
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  margin-top: 1em; }
 
 /* Items: */
 .research__item {
   position: relative;
   display: flex;
   flex-flow: column nowrap;
-  padding: 1em;
+  align-items: center;
+  min-width: 250px;
   margin-bottom: 1em;
-  margin-right: 1em;
-  margin-left: 1em;
-  border: 1px solid rgba(0, 0, 0, 0.15); }
+  margin-right: 1em; }
   .research__item a {
     text-decoration: none; }
 
 .research-item__img {
   position: relative;
-  margin: 0 auto;
-  border: 1px solid rgba(0, 0, 0, 0.15); }
+  margin: 0 auto; }
   .research-item__img img {
     position: relative;
-    width: 100%; }
+    width: 100%;
+    border: 4px solid black; }
 
-.research-item__title {
-  margin-top: 1em;
+.research-item__title, .research-item__year {
+  margin-top: .5em;
   font-family: "base-mono-narrow", monospace;
   font-weight: 200;
   font-size: 1.25rem;
-  text-align: center;
   text-transform: uppercase;
   line-height: 1.15;
   color: black; }
+
+.research-item__year {
+  margin-top: .25rem;
+  line-height: 1;
+  color: rgba(0, 0, 0, 0.5); }
 
 /* Universal footer styles: */
 [class*="footer"] {
