Add margins to gallery titles

--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -546,8 +546,11 @@
 /* Galleries: */
 [class*="big-title"] {
   position: relative;
+  margin-top: 1em;
+  margin-bottom: .5em;
   font-size: 2rem;
   font-weight: 900;
+  text-transform: uppercase;
   line-height: 1; }
 
 /* 1. Internal: */
