--- a/theme-testing/_sass/_research.scss
+++ b/theme-testing/_sass/_research.scss
@@ -96,8 +96,12 @@
 
 [class*="big-title"] {
 	position: relative;
+	margin-top: 1em;
+	margin-bottom: .5em;
 	font-size: 2rem;
 	font-weight: 900;
+//	font-family: "Oswald";
+	text-transform: uppercase;
 	line-height: 1;
 }
 
