--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -585,19 +585,20 @@
 
 .research-item__img {
   position: relative;
-  margin: 0 auto; }
+  width: 300px;
+  height: 200px;
+  overflow: hidden; }
   .research-item__img img {
-    position: relative;
-    width: 100%;
-    border: 4px solid black; }
+    position: absolute;
+    min-height: 100%; }
 
 .research-item__title, .research-item__year {
   margin-top: .5em;
-  font-family: "base-mono-narrow", monospace;
-  font-weight: 200;
-  font-size: 1.25rem;
+  font-family: "Oswald", sans-serif;
+  font-weight: 400;
+  font-size: 1.5rem;
   text-transform: uppercase;
-  line-height: 1.15;
+  line-height: 1;
   color: black; }
 
 .research-item__year {
