--- a/assets/css/_sass/_navbar.scss
+++ b/assets/css/_sass/_navbar.scss
@@ -1,67 +1,58 @@
-.include--topnav {
-	position: fixed;
-	top: 0;
-	left: 0;
-	display: block;
-	width: 100%;
-	height: 80px;
-	z-index: 2; // title text = 1
-	transition: height 1s;
+/* Navbar Styles: */
+
+/* Universal page styles: */
+[class*="nav-list"] {
+	a {
+		text-decoration: none;
+		color: white;
+	}
 }
 
-.topnav-scroll--hide {
-//	height: 0;
-}
+/* Main content: */
 
-.topnav-scroll--down {
-//	height: 60px;
-	opacity: 1 !important;
-}
-
-.topnav__background {
+.navbar-wrapper {
 	position: absolute;
-	left: 0;
 	top: 0;
-	height: 100%;
+	left: 0;
+	height: 60px;
 	width: 100%;
-	background-image: linear-gradient(rgba(0,0,0,.3), rgba(0,0,0,.3)), linear-gradient(to right, rgba(127, 0, 255, 1), rgba(127, 0, 255, 1));
-	opacity: 0;
-	transition: opacity .5s ease-out;
+	padding: 0 1em;
+	background-color: black;
+	z-index: 5;
 }
 
-.topnav__content-wrapper {
+.navbar-main-grid {
 	position: relative;
 	display: flex;
-	align-items: center;
-	justify-content: flex-end;
-	height: 100%;
-	width: 100%;
+	justify-content: space-between;
 }
 
-.topnav-item {
-	border: 1px solid black;
-	margin: 0 1em;
-	&:first-of-type {
-		margin-right: auto;
-	}
-}
-
-.topnav-item__link {
-	display: block;
-	height: 60px;
-	line-height: 60px;
-	border: 1px solid blue;
-	img {
+.navbar__home-icon {
+	align-self: center;
+	a {
 		display: block;
-		height: 60px;
+		img {
+			display: block;
+			height: 40px;
+		}
 	}
 }
 
-.topnav-dummy-content {
-	display: grid;
-	align-items: center;
-	justify-content: center;
-	height: 100vh;
-	font-size: 3em;
-	background-image: linear-gradient(to bottom, lightpink, white);
+// is <ul>
+.navbar__link-list {
+	position: relative;
+	display: flex;
+	list-style-type: none;
+	li {
+		display: inline-block;
+		padding-right: 1em;
+		a {
+			display: block;
+		}
+	}
+}
+
+// are <li> inside ^^
+[class*="nav-list__"] {
+
 }
