--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,19 +2,19 @@
 	<div class="navbar-main-grid">
 
 		<div class="navbar__home-icon">
-			<a href="{{ site.baseurl}}" aria-label="Scholars' Lab home"><img src="{{ '/assets/img/slab-logo-color-white.svg' | relative_url }}" alt="SLab logo"></a>
+			<a href="{{ site.url }}" aria-label="Scholars' Lab home"><img src="{{ '/assets/img/slab-logo-color-white.svg' | relative_url }}" alt="SLab logo"></a>
 		</div>
 
 		<ul class="navbar__link-list">
-			<li class="nav-list__home"><a href="{{ page.url | relative_url }}">Home</a></li>
-			<li class="nav-list__about"><a href="{{ page.url | relative_url }}">About</a></li>
-			<li class="nav-list__faq"><a href="{{ page.url | relative_url }}">FAQ</a></li>
-			<li class="nav-list__research"><a href="{{ page.url | relative_url }}">Research</a></li>
-			<li class="nav-list__events"><a href="{{ page.url | relative_url }}">Events</a></li>
-			<li class="nav-list__makerspace"><a href="{{ page.url | relative_url }}">Makerspace</a></li>
-			<li class="nav-list__students"><a href="{{ page.url | relative_url }}">Student Opportunities</a></li>
-			<li class="nav-list__blog"><a href="{{ page.url | relative_url }}">Blog</a></li>
-			<li class="nav-list__people"><a href="{{ page.url | relative_url }}">People</a></li>
+			<!--li class="nav-list__home"><a href="{{ site.url }}">Home</a></li-->
+			<li class="nav-list__about"><a href="{{ '/about' | relative_url }}">About</a></li>
+			<li class="nav-list__faq"><a href="{{ '/faq' | relative_url }}">FAQ</a></li>
+			<li class="nav-list__research"><a href="{{ '/research' | relative_url }}">Research</a></li>
+			<li class="nav-list__events"><a href="{{ '/events' | relative_url }}">Events</a></li>
+			<li class="nav-list__makerspace"><a href="{{ '/makerspace' | relative_url }}">Makerspace</a></li>
+			<li class="nav-list__students"><a href="{{ '/graduate-fellowships' | relative_url }}">Student Opportunities</a></li>
+			<li class="nav-list__blog"><a href="{{ '/blog' | relative_url }}">Blog</a></li>
+			<li class="nav-list__people"><a href="{{ '/people' | relative_url }}">People</a></li>
 		</ul>
 
 	</div> <!-- end content -->
