Create skeleton HTML/SCSS for page to track progress on topic page work

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,7 @@
 @import "text";
 @import "fellowship";
 @import "research";
+@import "progress-tracker"; // only while site under production
 
 * {
 	box-sizing: border-box;
