Run tracker HTML thru Python program to get SCSS classes set up

--- a/assets/css/_sass/_progress-tracker.scss
+++ b/assets/css/_sass/_progress-tracker.scss
@@ -1,1 +1,33 @@
 /* Progress Tracker Styles: */
+
+.progress-big-title {
+
+}
+
+.progress-main-grid {
+
+}
+
+.progress__column-label--1 {
+
+}
+
+.progress__column-label--2 {
+
+}
+
+.progress__column-label--3 {
+
+}
+
+.progress-item__name {
+
+}
+
+.progress-item__status {
+
+}
+
+.progress-item__notes {
+
+}
