--- a/assets/css/_sass/_progress-tracker.scss
+++ b/assets/css/_sass/_progress-tracker.scss
@@ -1,33 +1,125 @@
 /* Progress Tracker Styles: */
 
 .progress-big-title {
+	position: relative;
+	margin-top: calc(60px + .5em);
+	margin-bottom: .5em;
+	font-size: 3rem;
+	font-weight: 900;
+	text-align: center;
+	@media screen and (min-width: 600px) {
+		font-size: 4rem;
+	}
+}
 
+.progress-main-wrapper {
+	position: relative;
+	padding: 1em 4.167%;
+	@media screen and (min-width: 600px) {
+		padding: 1em 8.33%;
+	}
+	@media screen and (min-width: 1024px) {
+		max-width: calc(1000px + 16.67%);
+		margin: 0 auto;
+	}
 }
 
 .progress-main-grid {
+	position: relative;
+	display: grid;
+	grid-template-columns: 64px 2fr 1fr 2fr;
+/*	div:nth-of-type(9n+2) {
+		span {
+			color: cyan;
+		}
+	}
+	div:nth-of-type(9n-1) {
+		span {
+			color: hsl(229,100%,50%);
+		}
+	} */
+}
 
+[class*="progress__column-label"] {
+	margin-bottom: 1em;
+	font-family: "Oswald", sans-serif;
+	font-size: 2rem;
+	font-weight: 600;
+//	text-align: center;
+	text-transform: uppercase;
+	line-height: 1;
 }
 
 .progress__column-label--1 {
-
+	grid-column: 1 / span;
+	grid-row: 1 / span;
 }
 
 .progress__column-label--2 {
-
+	grid-column: 2 / span;
+	grid-row: 1 / span;
 }
 
 .progress__column-label--3 {
+	grid-column: 3 / span;
+	grid-row: 1 / span;
+	text-align: center;
+}
 
+.progress__column-label--4 {
+	grid-column: 4 / span;
+	grid-row: 1 / span;
+	text-align: center;
+}
+
+// $blue: hsl(229, 100%, 50%);
+// magenta = 300deg
+// cyan = 180deg
+
+[class*="progress-item"] {
+	div {
+		display: inline-block;
+	}
 }
 
 .progress-item__name {
+	a {
+		margin-bottom: .5em;
+		font-family: "base-mono-narrow", monospace;
+	//	font-weight: bold;
+	//	line-height: 1;
+		text-decoration: none;
+		color: black;
+		border-bottom: 2px solid magenta;
+		background-color: transparent;
+		-moz-transition: background-color .3s;
+		-webkit-transition: background-color .3s;
+		transition: background-color .3s;
+		&:hover, &:focus {
+			color: black;
+			background-color: magenta;
 
+		}
+	}
 }
 
 .progress-item__status {
-
+	justify-self: center;
+	font-family: "base-mono-narrow", monospace;
+//	font-weight: 200;
+	div {
+		span {
+			display: inline-block;
+			padding-right: .5rem;
+			font-weight: bold;
+			color: magenta;
+		}
+	}
 }
 
 .progress-item__notes {
-
+	justify-self: center;
+	ul {
+		padding-left: 0;
+	}
 }
