--- a/assets/css/_sass/_progress-tracker.scss
+++ b/assets/css/_sass/_progress-tracker.scss
@@ -37,9 +37,9 @@
 
 .progress-main-wrapper {
 	position: relative;
-	padding: 1em 4.167%;
+	padding: 0em 4.167%;
 	@media screen and (min-width: 600px) {
-		padding: 1em 8.33%;
+		padding: 0em 8.33%;
 	}
 	@media screen and (min-width: 1024px) {
 		max-width: calc(1000px + 16.67%);
@@ -47,20 +47,30 @@
 	}
 }
 
-.progress-main-grid {
+.progress-pages-grid, .progress-other-grid {
 	position: relative;
 	display: grid;
 	grid-template-columns: 64px 2fr 1fr 2fr;
-/*	div:nth-of-type(9n+2) {
-		span {
-			color: cyan;
-		}
+}
+
+[class*="progress-"][class*="__title"] {
+	margin-bottom: 1em;
+	font-size: 2rem;
+	font-weight: 900;
+	line-height: 1;
+	grid-column: 1 / -1; // span all, regardless of #
+	grid-row: 1 / span 1;
+	@media screen and (min-width: 600px) {
+		font-size: 2.5rem;
 	}
-	div:nth-of-type(9n-1) {
-		span {
-			color: hsl(229,100%,50%);
-		}
-	} */
+}
+
+.progress-pages__title {
+
+}
+
+.progress-other__title {
+	margin-top: 1em;
 }
 
 [class*="progress__column-label"] {
@@ -77,23 +87,23 @@
 
 .progress__column-label--1 {
 	grid-column: 1 / span;
-	grid-row: 1 / span;
+	grid-row: 2 / span;
 }
 
 .progress__column-label--2 {
 	grid-column: 2 / span;
-	grid-row: 1 / span;
+	grid-row: 2 / span;
 }
 
 .progress__column-label--3 {
 	grid-column: 3 / span;
-	grid-row: 1 / span;
+	grid-row: 2 / span;
 //	text-align: center;
 }
 
 .progress__column-label--4 {
 	grid-column: 4 / span;
-	grid-row: 1 / span;
+	grid-row: 2 / span;
 //	text-align: center;
 }
 
@@ -155,8 +165,8 @@
 	}
 }
 
-.progress-item__notes {
-	padding-left: 2em;
+.progress-item__notes, .progress-item__related {
+	padding-left: 1em;
 	align-self: start;
 	border-bottom: 1px solid hsla(300,100%,50%,.5);
 	ul {
@@ -184,4 +194,25 @@
 			}
 		}
 	}
+}
+
+/* Non-Page Tasks: */
+
+.progress-other-grid {
+	position: relative;
+	display: grid;
+	grid-template-columns: 64px 1fr 1fr 1fr 1fr 2fr;
+}
+
+.progress-item__phase, .progress-item__time {
+	font-family: base-mono-narrow;
+}
+
+.progress-item__phase {
+	font-weight: bold;
+	color: magenta;
+}
+
+.progress-item__time {
+	font-weight: 200;
 }
