--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,11 @@ layout: default
     <!-- insert pull quote here -->
 
     <div class="post__metadata">
-      <div class="post-meta__dek">&ldquo;{{ page.punchy-quote }}&rdquo;</div>
+
+      {% if page.pull-quote != nil %}
+      <div class="post-meta__quote">&ldquo;{{ page.pull-quote }}&rdquo;</div>
+      {% endif %}
+
       <div class="post-meta__author">
         <span>By</span>
         {% for author in authors %}
@@ -26,7 +30,9 @@ layout: default
                 {% endfor %}
         {% endif %}
       </div>
+
       <div class="post-meta__date">Posted <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %-d, %Y" }}</time></div>
+
       <div class="post-meta__categories">Filed under:
         {% for c in page.categories %}
         {% assign last = page.categories | last %}
@@ -34,52 +40,68 @@ layout: default
         {% else %} <a href="#">{{ c }}</a>,
         {% endif %}{% endfor %}
       </div>
+
+      <div class="post-meta__tags">Tagged as:
+        {% for t in page.tags%}
+        {% assign last = page.tags | last %}
+        {% if t == last %} <a href="#">{{ t }}</a>
+        {% else %} <a href="#">{{ t }}</a>,
+        {% endif %}{% endfor %}
+      </div>
+    </div> <!-- end metadata -->
+
+    <div class="post__content">
+      {{ content }}
     </div>
 
-    <!--span class="author">By
-        {% for author in authors %}
-            <a href="{{ site.baseurl }}/people/{{page.author}}/">{{ author.name }}</a>
+    <footer class="post__author-credits">
+      <!-- START BLOCK -->
+      {% for author in authors %} <!-- if there is a listed author -->
+        {% assign author_categories = author.people-category | join: "," %}
+
+        <!-- display person pic if exists -->
+        {% for image in site.static_files %}
+          {% if image.path contains page.author %}
+              <div class="post-author__image"><img src="{{ site.baseurl }}/assets/img/people/{{ page.author }}.jpg" alt="{{ author.name }}"></div>
+          {% endif %}
         {% endfor %}
-        {% if authors == empty %}
-            {% assign author = page.author | split: '-' %}
-                {% for name in author %}
-                    {{ name | capitalize}}
-                {% endfor %}
-        {% endif %}
-    </span>
-    <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %-d, %Y" }}</time-->
-  </header>
 
+        <!-- link to author's person page -->
+        <div class="post-author__info">
+          <a href="{{ site.baseurl }}/people/{{page.author}}/">{{ author.name }}</a>
+          <!-- list position if relevant: -->
+          {% if author_categories contains 'Staff' %}
+            {% if author.status == 'current' %}is{% else %}was{% endif %}
+              {{ author.position }} in the {{ site.title }}.
+          {% endif %}
+        </div>
 
-  <div class="content">
-  {{ content }}
-  </div>
+        <!-- cite post -->
+        <div class="post-author__citation">
+          <p>Cite this post: {{ author.name }}. "{{ page.title }}". Published {{ page.date | date: "%m/%d/%Y" }}. <a href="{{site.url}}/{{page.url}}">{{site.url}}/{{page.url}}</a>.</p>
+        </div>
 
-
-  <footer>
-    {% for author in authors %}
-      {% assign author_categories = author.people-category | join: "," %}
-      {% for image in site.static_files %}
-        {% if image.path contains page.author %}
-            <div class="person-image"><img src="{{ site.baseurl }}/assets/img/people/{{ page.author }}.jpg" alt="{{ author.name }}"></div>
-        {% endif %}
       {% endfor %}
-      <p><a href="{{ site.baseurl }}/people/{{page.author}}/">
-        {{ author.name }}</a>{% if author_categories contains 'Staff' %}
-        {% if author.status == 'current' %}is{% else %}was{% endif %}
-        {{ author.position }} in the {{ site.title }}.
-        {% endif %}</p>
+      <!-- END BLOCK -->
 
-<p>Cite this post: {{ author.name }}. "{{ page.title }}". Published {{ page.date | date: "%m/%d/%Y" }}. <a href="{{site.url}}/{{page.url}}">{{site.url}}/{{page.url}}</a>.</p>
-    {% endfor %}
-    {% if authors == empty %}
-        <div class="person-image"><img src="{{ site.baseurl }}/assets/img/people/scholarslab.png" alt="Scholars' Lab Lab"></div>
-        <p>Cite this post:
-            {% assign author = page.author | split: '-' %}
-            {% for name in author %}
-                {{ name | capitalize}}
-            {% endfor %}
-            . "{{ page.title }}". Published {{ page.date | date: "%m/%d/%Y" }}. <a href="{{site.url}}/{{page.url}}">{{site.url}}/{{page.url}}</a>.</p>
-    {% endif %}
-  </footer>
-</div>
+      <!-- START ALTERNATE BLOCK -->
+      {% if authors == empty %} <!-- if there is no listed author -->
+        <div class="person-image">
+          <img src="{{ site.baseurl }}/assets/img/people/scholarslab.png" alt="Scholars' Lab Lab">
+        </div>
+
+        <div class="post-author__citation">
+          <p>Cite this post:
+          {% assign author = page.author | split: '-' %}
+          {% for name in author %}
+            {{ name | capitalize}}
+          {% endfor %}
+          . &ldquo;{{ page.title }}&ldquo;. Published {{ page.date | date: "%m/%d/%Y" }}. <a href="{{site.url}}/{{page.url}}">{{site.url}}/{{page.url}}</a>.
+          </p>
+        </div>
+      {% endif %}
+      <!-- END BLOCK -->
+
+    </footer> <!-- end post footer -->
+  </div> <!-- end post-main-content -->
+</article> <!-- end post wrapper -->
