Fix error on class name

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -86,7 +86,7 @@ layout: default
 
       <!-- START ALTERNATE BLOCK -->
       {% if authors == empty %} <!-- if there is no listed author -->
-        <div class="person-image">
+        <div class="post-author__image">
           <img src="{{ site.baseurl }}/assets/img/people/scholarslab.png" alt="Scholars' Lab Lab">
         </div>
 
