Import blog post SCSS partial to main stylesheet

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,6 +12,7 @@
 @import "fellowship";
 @import "research";
 @import "progress-tracker"; // only while site under production
+@import "blog-post";
 
 * {
 	box-sizing: border-box;
